# MyNeuron

./: .gitignore  LICENSE.txt  MyLoss.py  MyNeural.py  MyNeural2.py  README.md  README.rst  activations.py  clean_ANN_with_relu.py  my_neuron.ipynb  salom.json  setup.cfg
src/: MyNeural.py
