[metadata]
name = MyNeuron
version = 1.0.0
author = Abduraxim Jabborov
author_email = ajbborov1234@gmail.com
description = MyNeuron is neural network.
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Wolfman1219/MyNeuron.git
project_urls =
    Bug Tracker = https://github.com/Wolfman1219/MyNeuron.git
    repository = https://github.com/Wolfman1219/MyNeuron.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
